[package]
name = "adsb_xgps"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
http-body-util = "0.1"
serde_json = "1"
tower = "0.5"
